@@ -11,5 +11,10 @@ test('basic', function (t) {
     t.is( bType.check(new A()), false, 'a is not an instance of B' );
     t.is( bType.check(new B()), true, 'b is an instance of B' );
 
+    var Thing = new o.Class({ attributes: { foo:{} } });
+    var thingType = new o.InstanceOfType( Thing );
+    var thing = thingType.coerce({ foo:32 });
+    t.is( thing.foo(), 32, 'Class coercion worked' );
+
     t.end();
 });
