@@ -12,6 +12,8 @@ NEXT RELEASE
  - Renamed o.Constructor to o.Class, because that is what it is and it is
    less to type.
  - Greatly simplify the trait types.
+ - InstanceOfType declares a simpleObject to instance coercion if the
+   instance constructor was created with o.Class.
 
 0.0.8 : 2014-01-03
  - In addition to accepting an Array, o.DuckType now accepts an Object,
